# LeafTS

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build_gui.bat  fix_append.py  fix_outputs.py  main.c  main_uart.c  patch_handler.py  patch_handler_2.py  start_renode.bat  start_renode_gui.bat
.github/workflows/: release.yml
boards/: boards.json
hal/: hal_flash.h  hal_nrf52_uart.h  hal_stm32f1_uart.h  hal_stm32f4_flash.h  hal_stm32f4_uart.h  hal_stm32g0_uart.h  hal_uart.h  hal_vflash.h  hal_vuart.h
hal/esp32/: hal_esp32_flash.h  hal_esp32_uart.h
hal/nrf/: hal_nrf52_flash.h
hal/rp/: hal_rp2040_flash.h  hal_rp2040_uart.h
hal/stm32/: hal_stm32f1_flash.h  hal_stm32f2_flash.h  hal_stm32f2_uart.h  hal_stm32f3_flash.h  hal_stm32f3_uart.h  hal_stm32f7_flash.h  hal_stm32f7_uart.h  hal_stm32g0_flash.h  hal_stm32g4_flash.h  hal_stm32g4_uart.h  hal_stm32h7_flash.h  hal_stm32h7_uart.h  hal_stm32l1_flash.h  hal_stm32l1_uart.h  hal_stm32l4_flash.h  hal_stm32l4_uart.h  hal_stm32l5_flash.h  hal_stm32l5_uart.h  hal_stm32wb_flash.h  hal_stm32wb_uart.h  hal_stm32wl_flash.h  hal_stm32wl_uart.h
include/: leafts.h  platform_hal.h  uart_handler.h
renode/: leafts_gui_demo.resc  leafts_test.resc  leafts_uart_demo.resc  main_renode.c  startup.c  stm32l476.ld  stm32l476.repl
src/: hal_nrf52_flash.c  hal_nrf52_uart.c  hal_stm32f1_flash.c  hal_stm32f1_uart.c  hal_stm32f4_flash.c  hal_stm32f4_uart.c  hal_stm32g0_flash.c  hal_stm32g0_uart.c  hal_stm32l4_flash.c  hal_stm32l4_uart.c  hal_vflash.c  hal_vuart.c  leafts.c  platform_hal.c  uart_handler.c
src/esp32/: hal_esp32_flash.c  hal_esp32_uart.c
src/nrf/: hal_nrf52_flash.c  hal_nrf52_uart.c
src/rp/: hal_rp2040_flash.c  hal_rp2040_uart.c
src/stm32/: hal_stm32f1_flash.c  hal_stm32f1_uart.c  hal_stm32f2_flash.c  hal_stm32f2_uart.c  hal_stm32f3_flash.c  hal_stm32f3_uart.c  hal_stm32f4_flash.c  hal_stm32f4_uart.c  hal_stm32f7_flash.c  hal_stm32f7_uart.c  hal_stm32g0_flash.c  hal_stm32g0_uart.c  hal_stm32g4_flash.c  hal_stm32g4_uart.c  hal_stm32h7_flash.c  hal_stm32h7_uart.c  hal_stm32l1_flash.c  hal_stm32l1_uart.c  hal_stm32l4_flash.c  hal_stm32l4_uart.c  hal_stm32l5_flash.c  hal_stm32l5_uart.c  hal_stm32wb_flash.c  hal_stm32wb_uart.c  hal_stm32wl_flash.c  hal_stm32wl_uart.c
test/: hal_flash_contract.c  hal_flash_contract.h  setup_esp32.c  setup_nrf52.c  setup_rp2040.c  setup_stm32f1.c  setup_stm32f2.c  setup_stm32f3.c  setup_stm32f4.c  setup_stm32f7.c  setup_stm32g0.c  setup_stm32g4.c  setup_stm32h7.c  setup_stm32l1.c  setup_stm32l4.c  setup_stm32l5.c  setup_stm32wb.c  setup_stm32wl.c  test.c  test_hal_nrf52_mock.c  test_hal_stm32f1_mock.c  test_hal_stm32f2_mock.c  test_hal_stm32f3_mock.c  test_hal_stm32f4_mock.c  test_hal_stm32f7_mock.c  test_hal_stm32g0_mock.c  test_hal_stm32g4_mock.c  test_hal_stm32h7_mock.c  test_hal_stm32l1_mock.c  test_hal_stm32l4_mock.c  test_hal_stm32l5_mock.c  test_hal_stm32wb_mock.c  test_hal_stm32wl_mock.c
tools/: leafts_client.py  leafts_gui.py  leafts_gui.spec  pack_releases.py  renode_serial_bridge.py  scraper.py  serial_bridge.py
